# Hermes

./: assistant.json  function_metadata.json  functions.py  main.py  pyproject.toml
static/: index.html  script.js  style.css
static/assets/: iframe.html
supabase_handlers/: api_interaction_handler.py  assistant_handler.py  handler.py  message_handler.py  run_handler.py  supabase_client.py  thread_handler.py  user_handler.py
utils/: logger.py  middleware_logger.py  models.py  tool_handler.py
utils/modals/: title_manager.py
utils/tools/: bsp_search_config.json  consolidated_screening_list_search_config.json  custom_google_search_config.json  trade_leads_search_config.json
