[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "^3.0.0"
functions = "^0.7.0"
supabase = ">=2.0.0,<3.0.0"
openai = "^1.2.3"
packaging = "^23.2"
pydantic = "^2.5.1"
utils = "^1.0.1"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
colorlog = "^6.7.0"
requests = "^2.31.0"
loguru = "^0.7.2"
httpx = "0.24.1"
logger = "^1.4"
tiktoken = "^0.5.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"